--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>This is my first git learning</h1>
     <p>I really enjoyed it</p>
+    <p>I have made my first commit</p>
 </body>
 </html>
