--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>This is my first git learning</h1>
-    <p>I really enjoyed it</p>
+    <p>I really enjoyed it alot</p>
     <p>I have made my first commit</p>
 </body>
 </html>
